# portmidi-rs

./: .gitignore  .travis.yml  CONTRIBUTORS.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  Vagrantfile  index.html  search-index.js
examples/: list_devices.rs  monitor.rs  monitor_all.rs  monitor_device.rs  portmidi-example1.rs  twinkle_twinkle.rs  virtual_devices.rs
examples/common/: mod.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Show.js
implementors/core/kinds/: trait.Copy.js
implementors/core/marker/: trait.Copy.js
other/: update-gh-pages.sh
portmidi/: constant.HDRLENGTH.html  constant.PM_HOST_ERROR_MSG_LEN.html  enum.PortMidiError.html  fn.count_devices.html  fn.get_default_input_device_id.html  fn.get_default_output_device_id.html  fn.get_device_info.html  fn.get_error_text.html  fn.get_host_error_text.html  fn.initialize.html  fn.terminate.html  index.html  stability.html  stability.json  struct.DeviceInfo.html  struct.InputPort.html  struct.MidiEvent.html  struct.MidiMessage.html  struct.OutputPort.html  type.PortMidiDeviceId.html  type.PortMidiResult.html
src/: context.rs  device.rs  ffi.rs  global.rs  io.rs  lib.rs  midi.rs  time.rs  types.rs  util.rs  vdevice.rs
src/examples/portmidiex1/: main.rs
src/ffi/: functions.rs  mod.rs  types.rs
src/libc/: lib.rs.html
src/portmidi/: lib.rs  lib.rs.html  midi.rs  test.rs  time.rs  util.rs
tests/: portmidi.rs  tests.rs
