[package]

name = "portmidi"
version = "0.1.5"
authors = [
    "Sam Doshi <sam@metal-fish.co.ul>",
    "Philippe Delrieu <philippe.delrieu@free.fr>"
]
license = "MIT OR Apache-2.0"
description = "High-level PortMidi bindings for Rust"
homepage = "https://github.com/samdoshi/portmidi-rs"
repository = "https://github.com/samdoshi/portmidi-rs"
documentation = "http://samdoshi.github.io/portmidi-rs/portmidi/index.html"
keywords = ["midi", "music", "audio"]

[dependencies]
libc = "0.2.5"
