[package]

name = "portmidi"
version = "0.2.0"
authors = [
    "Sam Doshi <sam@metal-fish.co.ul>",
    "Philippe Delrieu <philippe.delrieu@free.fr>"
]
license = "MIT OR Apache-2.0"
description = "High-level PortMidi bindings for Rust"
homepage = "https://github.com/musitdev/portmidi-rs"
repository = "https://github.com/musitdev/portmidi-rs"
documentation = "http://musitdev.github.io/portmidi-rs/portmidi/index.html"
keywords = ["midi", "music", "audio"]

[dependencies]

[dev-dependencies]
docopt = "0.6.*"
rustc-serialize = "0.3.*"
rci = "~0.1"

[[example]]
name = "monitor"
path = "examples/monitor.rs"

[[example]]
name = "play"
path = "examples/twinkle_twinkle.rs"
